Fix roam info text align.

--- a/_assets/stylesheets/_style.sass
+++ b/_assets/stylesheets/_style.sass
@@ -178,6 +178,9 @@ article.content
   h3
     text-transform: capitalize
 
+  p.info
+    text-align: center
+
   a
     +button-hover-glow
     width: 100%
@@ -197,6 +200,9 @@ article.content
     +grid-column(6)
     padding-left: 0
     text-align: left
+
+    p.info
+      text-align: left
 
 // Squadron status.
 .squadrons
